@@ -1,8 +1,9 @@
-2017-04-13
+2017-04-14
 
         * Version 1.3.0 released
         =========================
 
+        Add support for Monte Carlo identifier metadata (#1483)
         Add GEventList::has_mc_id() and GEventAtom::mc_id() methods (#1483)
         Add GEventList::has_phase() and GEventList::has_detxy() methods (#1982)
         Add GEventList::append_column() method (#1991)
